--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 			<!-- in-masers -->
 			<section class="in-masers">
 				<div class="container">
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-12 section-title">
 							<h2>
 								Másters
@@ -354,7 +354,7 @@
 								Presenciales y online en directo
 							</h4>
 						</div>
-					</div>
+					</div> -->
 					<div class="row">
 						<!-- col -->
 						<div class="col-6 col-sm-12">
