--- a/blog.html
+++ b/blog.html
@@ -292,15 +292,18 @@
 					<div class="row">
 						<!-- col -->
 						<div class="col-6 col-sm-12">
-							<a href="">
-								<div class="block-img">
-									<picture>
-										<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
-										<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-googleads.jpg">
-										<img class="img-responsive" src="assets/nuestro-blog/blog-googleads.jpg">
-									</picture>
-								</div>
+							<!-- in-nuestro__block -->
+							<div class="in-nuestro__block">
+								<a href="">
+									<div class="block-img">
+										<picture>
+											<source media="(max-width:760px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
+											<source media="(max-width:990px)" srcset="assets/nuestro-blog/table/blog-googleads.jpg">
+											<source media="(min-width:991px)" srcset="assets/nuestro-blog/blog-googleads.jpg">
+											<img class="img-responsive" src="assets/nuestro-blog/blog-googleads.jpg">
+										</picture>
+									</div>
+								</a>
 								<div class="block">
 									<h5>
 										Estrategias en Google Ads: ¿Qué son los modelos de atribución y para qué sirven?
@@ -313,11 +316,12 @@
 											24 de julio, 2020
 										</li>
 										<li>
-											Google Ads
+											<a href="">Google Ads</a>
 										</li>
 									</ul>
 								</div>
-							</a>
+							</div>
+							<!-- /in-nuestro__block -->
 						</div>
 						<!-- /col -->
 						<!-- col -->
