--- a/master-marketing-digital.html
+++ b/master-marketing-digital.html
@@ -1211,6 +1211,11 @@
 								<div class="field">
 									<textarea placeholder="Comentarios" name="comments"></textarea>
 								</div>
+								<div class="field">
+									<article class="compay-info">
+										Avidalia, S.L.U ( en adelante "Instituto Marketing" ), tratará los datos de carácter personal que usted ha proporcionado con la finalidad de atender a su solicitud de información, reclamación, duda o sugerencia que realice sobre los productos y/o servicios ofrecidos por Instituto Marketing, incluido por vía telefónica, así como para mantenerle informado de nuestra actividad. A su vez, le informamos que vamos a realizar un perfilado de sus datos de carácter personal para poderle enviar información personalizada en función de sus intereses. Puede consultar información adicional pulsando aquí. Usted podrá revocar el consentimiento otorgado, así como ejercitar los derechos reconocidos en los artículos 15 a 22 del Reglamento (UE) 2016/679, mediante solicitud dirigida en c/ Consell de cent 295, 3º 2ª, 08007 Barcelona, España o a la siguiente dirección de correo electrónico: formacion@institutomarketing.es, adjuntando copia de su DNI o documentación acreditativa de su identidad. Si lo desea puede consultar información adicional y detallada sobre protección de datos pulsando aquí.
+									</article>
+								</div>
 								<div class="check-rule">
 									<div>
 										<input type="checkbox" name="privadad" hidden id="privadad">
